ICU-697 - Reply arrow overlaps autocomplete fix

--- a/sass/layout/_post.scss
+++ b/sass/layout/_post.scss
@@ -389,7 +389,7 @@
 .post-create__container {
     @include flex(0 0 auto);
     width: 100%;
-    z-index: 5;
+    z-index: 7;
 
     label {
         font-weight: normal;
